Flagged sub-ranges table has a fixed height and scrolls on overflow

--- a/eorlive_prototype/app/static/css/style.css
+++ b/eorlive_prototype/app/static/css/style.css
@@ -1,4 +1,4 @@
-#error_table {
+#error_table, #set_construction_div {
 	width: 100%;
 	max-width: 100%;
 	max-height: 400px;
